# otel-test

./: README.md  db.py  docker-compose.yaml  main.py  pyproject.toml  telemetry.py
grafana/: config.alloy  grafana-datasources.yaml  tempo.yaml
